json various language

--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 	compile group: 'jstl', name: 'jstl', version: '1.2'
 	compile("org.apache.tomcat.embed:tomcat-embed-jasper")
 	compile 'org.springframework.social:spring-social-github:1.0.0.M4'
+	compile group: 'org.json', name: 'json', version: '20160810'
+
 }
